--- a/home.html
+++ b/home.html
@@ -16,5 +16,9 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat molestiae ducimus provident distinctio veniam accusamus nisi, natus enim officia magni nihil eaque iste consequuntur, sed qui cumque mollitia! Recusandae, inventore!
     </p>
     </div>
+    <div class="imagem">
+    <img src="imagem.png">
+    <img src="https://http2.mlstatic.com/foto-desenho-para-o-seu-perfil-das-redes-sociais-D_NQ_NP_614041-MLB27185740295_042018-O.jpg">
+    </div>
 </body>
 </html>
