add infos e habilidades

--- a/home.html
+++ b/home.html
@@ -5,20 +5,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Home</title>
+    <title>Bem-vindo</title>
 </head>
 <body>
-    <div class="titulo">
-    <h1>Título da página</h1>
-    </div>
-    <div class="texto">
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat molestiae ducimus provident distinctio veniam accusamus nisi, natus enim officia magni nihil eaque iste consequuntur, sed qui cumque mollitia! Recusandae, inventore!
-    </p>
-    </div>
+    <h1>Portfólio</h1>
+
     <div class="imagem">
-    <img src="imagem.png">
-    <img src="https://http2.mlstatic.com/foto-desenho-para-o-seu-perfil-das-redes-sociais-D_NQ_NP_614041-MLB27185740295_042018-O.jpg">
+        <img src="imagem.png" alt="Jose Santos">
+        <p>
+            José Santos
+        </p>
     </div>
+   <div class="container">
+        <div class="caixa">
+            <div class="linha">
+                <p>Nome: </p>
+                <p>José Alves da Silva Santos</p>
+            </div>
+            <div class="linha">
+                <p>Endereço: </p>
+                <p>Rua Ipuaçu , 4304 Jardim Amalia</p>
+        </div>
+        <div class="linha">
+            <p>Email: </p>
+            <p>josele@gmail.com</p>
+        </div>
+        <div class="linha">
+            <p>telefone: </p>
+            <p>(11)9543-11232</p>
+        </div>
+        </div> 
+
+        <!-- <ol type="I"></ol> -->
+        <div class="caixa">
+            <h2>Habilidades</h2>
+            <ul>
+                <li>Domina HTML e CSS</li>
+                <li>Sabe um pouco de JavaScript</li>
+                <li>Sabe um pouco de Python</li>
+            </ul>
+        </div>
+    </div>
+
+
 </body>
 </html>
